# viloagents

./: Agents.md  Dockerfile  README.md  agents.yaml  pyproject.toml
ai_chat_backend/: main.py
ai_chat_backend/agents/: __init__.py  base.py  default_agent.py  math_agent.py
ai_chat_backend/api/: cli.py  server.py
ai_chat_backend/config/: loader.py  schema.py
ai_chat_backend/router/: router_agent.py  strategy.py
ai_chat_backend/tools/: __init__.py  base.py  calculator.py
docs/: Technical Specification Modular AI.txt
scripts/: chat_demo.py
tests/: test_config_loading.py  test_keyword_strategy.py  test_llm_integration.py
